# standards

./: README.md
contract-cross-calls/receiver-contract/app/: README.md
contract-cross-calls/receiver-contract/app/src/: lib.rs
contract-cross-calls/receiver-contract/app/src/services/: mod.rs  query_service.rs  receiver_service.rs
contract-cross-calls/receiver-contract/app/src/states/: mod.rs  receiver_state.rs
contract-cross-calls/receiver-contract/wasm/: app.idl  app_client.rs  build.rs
contract-cross-calls/transmiter-contract/: README.md
contract-cross-calls/transmiter-contract/app/: README.md
contract-cross-calls/transmiter-contract/app/src/: lib.rs
contract-cross-calls/transmiter-contract/app/src/clients/: mod.rs
contract-cross-calls/transmiter-contract/app/src/services/: mod.rs  query_service.rs  transmitter_service.rs
contract-cross-calls/transmiter-contract/app/src/states/: mod.rs  transmiter_state.rs
contract-cross-calls/transmiter-contract/wasm/: app.idl  app_client.rs  build.rs
extended-vft/: .gitignore  Cargo.toml  build.rs
extended-vft/app/: Cargo.toml
extended-vft/app/src/: lib.rs
extended-vft/app/src/services/extended_vft/: mod.rs
extended-vft/client/: Cargo.toml
extended-vft/client/src/: lib.rs
extended-vft/idl_and_client/: extended_vft_client.rs
extended-vft/tests/: node_test.rs  test.rs
extended-vft/tests/utils_gclient/: mod.rs
extended-vft/wasm/: build.rs  demo_client.rs
extended-vft/wasm/src/: lib.rs
extended-vmt/: .gitignore  Cargo.toml  build.rs
extended-vmt/app/: Cargo.toml
extended-vmt/app/src/: lib.rs
extended-vmt/app/src/services/extended_vmt/: funcs.rs  mod.rs  utils.rs
extended-vmt/client/: Cargo.toml
extended-vmt/client/src/: lib.rs
extended-vmt/idl_and_client/: extended_vmt.idl  extended_vmt_client.rs
extended-vmt/wasm/: build.rs  extended_vmt_client.rs
extended-vnft/: Cargo.toml  build.rs
extended-vnft/app/: Cargo.toml
extended-vnft/app/src/: lib.rs
extended-vnft/app/src/services/: utils.rs
extended-vnft/app/src/services/extended_vnft/: funcs.rs  mod.rs
extended-vnft/client/: Cargo.toml
extended-vnft/client/src/: lib.rs
extended-vnft/idl_and_client/: extended_vnft.idl  extended_vnft_client.rs
extended-vnft/tests/: node_test.rs  test.rs
extended-vnft/tests/utils_gclient/: mod.rs
extended-vnft/wasm/: build.rs  extended_vnft_client.rs
vft-service/: Cargo.toml
vft-service/src/: funcs.rs  lib.rs  utils.rs
vmt-service/: Cargo.toml
vmt-service/src/: funcs.rs  lib.rs  utils.rs
vnft-service/: Cargo.toml
vnft-service/src/: funcs.rs  lib.rs  utils.rs
