[package]
name = "extended-vft"
version = "1.1.0"
license = "MIT"
edition = "2024"

[dependencies]
extended-vft-app = { path = "app" }

[build-dependencies]
extended-vft-app = { path = "app" }
sails-rs = { version = "0.9.0", features = ["wasm-builder"] }
sails-idl-gen = "0.9.0"
sails-client-gen = "0.9.0"

[dev-dependencies]
extended-vft = { path = ".", features = ["wasm-binary"] }
extended-vft-client = { path = "client" }
sails-rs = { version = "0.9.0", features = ["gtest"] }
tokio = { version = "1.41", features = ["rt", "macros"] }
gclient = "1.9.0"
gear-core = "1.9.0"

[features]
wasm-binary = []
