[package]
name = "extended-vmt"
version = "1.1.0"
license = "MIT"
edition = "2021"

[dependencies]
extended-vmt-app = { path = "app" }

[build-dependencies]
extended-vmt-app = { path = "app" }
sails-rs = { version = "=0.7.3", features = ["wasm-builder"] }
sails-idl-gen = "=0.7.3"
sails-client-gen = "=0.7.3"

[dev-dependencies]
extended-vmt = { path = ".", features = ["wasm-binary"] }
extended-vmt-client = { path = "client" }
sails-rs = { version = "=0.7.3", features = ["gtest"] }
tokio = { version = "1.41", features = ["rt", "macros"] }
gclient = "=1.7.1"
gear-core = "=1.7.1"

[features]
wasm-binary = []
