[package]
name = "extended-vnft"
version = "1.1.0"
license = "MIT"
edition = "2021"

[dependencies]
extended-vnft-app = { path = "app" }

[build-dependencies]
extended-vnft-app = { path = "app" }
sails-rs = { version = "=0.8.1", features = ["wasm-builder"] }
sails-idl-gen = "=0.8.1"
sails-client-gen = "=0.8.1"

[dev-dependencies]
extended-vnft = { path = ".", features = ["wasm-binary"] }
extended-vnft-client = { path = "client" }
sails-rs = { version = "=0.8.1", features = ["gtest"] }
tokio = { version = "1.41", features = ["rt", "macros"] }
gclient = "=1.8.1" 
gear-core =  "=1.8.1"

[features]
wasm-binary = []
