[package]
name = "vft-service"
version = "1.1.0"
license = "MIT"
edition = "2021"

[dependencies]
gstd = "=1.8.0"
log = "*"
sails-rs = "=0.8.0"
parity-scale-codec = { version = "3", default-features = false }
scale-info = { version = "2", default-features = false }

[dev-dependencies]
env_logger = "*"

[features]
wasm-binary = []
