[package]
name = "extended-vmt-client"
version = "0.1.0"
edition = "2021"

[dependencies]
mockall = { version = "0.12", optional = true }
sails-rs = "=0.7.1"

[build-dependencies]
extended-vmt-app = { path = "../app" }
sails-idl-gen = "=0.7.1"
sails-client-gen = "=0.7.1"

[features]
mocks = ["sails-rs/mockall", "dep:mockall"]
