[package]
name = "extended-vmt-client"
version = "0.1.0"
edition = "2021"

[dependencies]
mockall = { version = "0.12", optional = true }
sails-rs = "=0.8"

[build-dependencies]
extended-vmt-app = { path = "../app" }
sails-idl-gen = "=0.8"
sails-client-gen = "=0.8"

[features]
mocks = ["sails-rs/mockall", "dep:mockall"]
